# Babai

./: .gitignore  CMakeLists.txt  README.md
examples/: example1.cpp
examples/example2/: CMakeLists.txt  example.cpp  particles.csv
include/Babai/: babai.hpp  random_generator.hpp
include/Babai/problems/: problem.hpp
include/Babai/solvers/: pso.hpp
test/: problem-test.cpp
